Fixed Scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.w-icon-slider-right:before {
+/* .w-icon-slider-right:before {
   content: "\e600";
 }
 .w-icon-slider-left:before {
@@ -28,12 +28,26 @@
 .w-icon-arrow-down:before,
 .w-icon-dropdown-toggle:before {
   content: "\e603";
-}
+} */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 10px; 
+}
+
 html {
   height: 100%;
 }
@@ -298,7 +312,10 @@ input[type="reset"] {
   display: none;
   padding: 20px;
   text-align: center;
-  background-color: #dddddd;
+  background-color: #2d2d2d;
+  color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 10px 40px rgba(0,0,0,0.375);
 }
 .w-form-fail {
   display: none;
